--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="root">belum ke-render</div>
+    <div id="modal"></div>
     <script type="module" src="./App.jsx"></script>
 </body>
 </html>
